--- a/www.bidhan.com/multimedia.html
+++ b/www.bidhan.com/multimedia.html
@@ -21,13 +21,14 @@
 <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>Bidhan - Advertising & Marketing Pvt. Ltd.</title>
+<title>AD Label Advertising</title>
 
 <!-- Bootstrap -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800" rel="stylesheet">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/plugin.css" rel="stylesheet">
 <link href="css/vendor.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" media="all">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,14 +38,14 @@
     <![endif]-->
 </head>
 <body>
-<div class="loading"> <img src="images/loading.png" width="57" height="57" class="loading-content"> </div>
+  <div class="loading"> <img src="images/ALD Logo/ALD-01.png" width="100" height="80" class="loading-content"> </div>
 <div class="page">
   <header>
     <nav class="navbar">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          <a class="navbar-brand" href="index.html"><img src="images/bidhanlogo.png" width="436" height="110" class="img-responsive"></a> </div>
+          <a class="navbar-brand" href="index.html"><img src="images/ALD Logo/ALD-01.png" width="100" height="50" class=""></a> </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
@@ -66,8 +67,8 @@
         <div class="title">
           <h1>what we <strong>do</strong></h1>
         </div>
-        <p>A believer and creator of ideas, Bidhan is that differentiator in the advertising & marketing arena, which not just carries the experience of a veteran but also the expertise of handling the ever-evolving, ever-challenging media. A mounting presence in the industry since 1970 is a testimony. And achieving noteworthy milestones for every brand that has been catered is a revelation.</p>
-        <p class="lead">A receiver of 40 National Awards, Bidhan is one of the oldest top-ranking INS credited advertising agencies.</p>
+        <p>A believer and creator of ideas, "AD Label" is that differentiator in the advertising & marketing arena, which not just carries the experience of a veteran but also the expertise of handling the ever-evolving, ever-challenging media. A mounting presence in the industry since 1970 is a testimony. And achieving noteworthy milestones for every brand that has been catered is a revelation.</p>
+        <p class="lead">A receiver of 40 National Awards, "AD Label" is one of the oldest top-ranking INS credited advertising agencies.</p>
         <div class="arrow"></div>
       </div>
       <div class="container-fluid">
@@ -194,41 +195,43 @@
   </aside>
   <footer>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-2">
-          <div class="logo"><img src="images/bidhanlogo-footer.png" width="436" height="110" class="img-responsive"></div>
+        <div class="row">
+            <div class="col-md-2">
+                <div class="logo"><img src="images/ALD Logo/ALD-01.png" width="350" height="60" class="img-responsive"></div>
+            </div>
+            <div class="col-md-4 col-sm-5 footer-padding">
+                <address>
+  <strong style="color: #fff000;">AD Lable Advertising</strong><br>
+  432, 4th Floor,<br>
+  Laxmi Enclave 2,<br>
+  Nr. Gajera School, Katargam,<br>
+  Surat - 395004, Gujarat, India.
+  </address>
+            </div>
+            <div class="col-md-4 col-sm-5 footer-padding">
+                <address>
+                    <i class="fas fa-location-dot" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Map<br>
+                    <i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:adlable12@gmail.com" target="_self">adlable12@gmail.com</a><br>
+                    <i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:95128 12812" target="_self">95128 12812</a>
+                </address>
+            </div>
+            <div class="col-md-2 col-sm-2 footer-padding">
+                <div class="social">
+                    <h3>Follow Us</h3>
+                    <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-facebook"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> <a href="#"><i class="fab fa-linkedin"></i></a> </div>
+            </div>
         </div>
-        <div class="col-md-4 col-sm-5">
-          <address>
-          <strong>Bidhan - Advertising & Markering Pvt. Ltd.</strong><br>
-          C-3/405, 4th Floor,<br>
-          Anushruti Tower, Near Muktidham Jain Derasar,<br>
-          Nr. Thaltej Cross Road, S.G. Highway,<br>
-          Thaltej, Ahmedabad - 380059, Gujarat, India.
-          </address>
-        </div>
-        <div class="col-md-4 col-sm-5">
-          <address>
-          <i class="icon icon-location" aria-hidden="true"></i> Map<br>
-          <i class="icon icon-email" aria-hidden="true"></i> <a href="mailto:mukeshpatel@bidhan.com" target="_self">info@bidhan.com</a><br>
-          <i class="icon icon-call" aria-hidden="true"></i> <a href="tel:93283 37583" target="_self">93283 37583</a>
-          </address>
-        </div>
-        <div class="col-md-2 col-sm-2">
-          <div class="social">
-            <h3>Follow Us</h3>
-            <a href="#"><i class="icon socicon-twitter"></i></a> <a href="#"><i class="icon socicon-facebook"></i></a> <a href="#"><i class="icon socicon-instagram"></i></a> <a href="#"><i class="icon socicon-linkedin"></i></a> </div>
-        </div>
-      </div>
-      <ul class="nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">services</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="team.html">Team</a></li>
-        <li><a href="clients.html">Clients</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+        <nav class="underline-nav"> 
+        <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="corporate.html">services</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="clients.html">Clients</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        </nav>
     </div>
   </footer>
 </div>
