--- a/www.bidhan.com/team.html
+++ b/www.bidhan.com/team.html
@@ -22,13 +22,15 @@
     <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bidhan - Advertising & Marketing Pvt. Ltd.</title>
+    <title>AD Label Advertising</title>
 
     <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/plugin.css" rel="stylesheet">
     <link href="css/vendor.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" media="all">
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -44,16 +46,14 @@
 </head>
 
 <body>
-    <div class="loading">
-        <img src="images/loading.png" width="57" height="57" class="loading-content">
-    </div>
+    <div class="loading"> <img src="images/ALD Logo/ALD-01.png" width="100" height="80" class="loading-content"> </div>
     <div class="page">
         <header>
             <nav class="navbar">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                        <a class="navbar-brand" href="index.html"><img src="images/bidhanlogo.png" width="436" height="110" class="img-responsive"></a> </div>
+                        <a class="navbar-brand" href="index.html"><img src="images/ALD Logo/ALD-01.png" width="100" height="50" class=""></a> </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <nav class="underline-nav"> 
                         <ul class="nav navbar-nav navbar-right">
@@ -101,7 +101,7 @@
                                         <h2>director
                                             <small>Abhik Patel</small>
                                         </h2>
-                                        <p>He is the young, dynamic and passionate for branding Director at Bidhan. He loves brainstorming and designing out of the box campaigns for all his clients and is an enthusiastic and a positive team leader.His eloquent
+                                        <p>He is the young, dynamic and passionate for branding Director at "AD Label". He loves brainstorming and designing out of the box campaigns for all his clients and is an enthusiastic and a positive team leader.His eloquent
                                             approach in discussing and churning out campaigns, that will surely work for the clients, is an inspiration for the rest of the team.</p>
                                     </div>
                                 </div>
@@ -115,28 +115,28 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-2">
-                        <div class="logo"><img src="images/bidhanlogo-footer.png" width="436" height="110" class="img-responsive"></div>
+                        <div class="logo"><img src="images/ALD Logo/ALD-01.png" width="350" height="60" class="img-responsive"></div>
                     </div>
-                    <div class="col-md-4 col-sm-5">
+                    <div class="col-md-4 col-sm-5 footer-padding">
                         <address>
-          <strong>Bidhan - Advertising & Markering Pvt. Ltd.</strong><br>
-          C-3/405, 4th Floor,<br>
-          Anushruti Tower, Near Muktidham Jain Derasar,<br>
-          Nr. Thaltej Cross Road, S.G. Highway,<br>
-          Thaltej, Ahmedabad - 380059, Gujarat, India.
+          <strong style="color: #fff000;">AD Lable Advertising</strong><br>
+          432, 4th Floor,<br>
+          Laxmi Enclave 2,<br>
+          Nr. Gajera School, Katargam,<br>
+          Surat - 395004, Gujarat, India.
           </address>
                     </div>
-                    <div class="col-md-4 col-sm-5">
+                    <div class="col-md-4 col-sm-5 footer-padding">
                         <address>
-          <i class="icon icon-location" aria-hidden="true"></i> Map<br>
-          <i class="icon icon-email" aria-hidden="true"></i> <a href="mailto:mukeshpatel@bidhan.com" target="_self">info@bidhan.com</a><br>
-          <i class="icon icon-call" aria-hidden="true"></i> <a href="tel:93283 37583" target="_self">93283 37583</a>
-          </address>
+                            <i class="fas fa-location-dot" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;Map<br>
+                            <i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:adlable12@gmail.com" target="_self">adlable12@gmail.com</a><br>
+                            <i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:95128 12812" target="_self">95128 12812</a>
+                        </address>
                     </div>
-                    <div class="col-md-2 col-sm-2">
+                    <div class="col-md-2 col-sm-2 footer-padding">
                         <div class="social">
                             <h3>Follow Us</h3>
-                            <a href="#"><i class="icon socicon-twitter"></i></a> <a href="#"><i class="icon socicon-facebook"></i></a> <a href="#"><i class="icon socicon-instagram"></i></a> <a href="#"><i class="icon socicon-linkedin"></i></a> </div>
+                            <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-facebook"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> <a href="#"><i class="fab fa-linkedin"></i></a> </div>
                     </div>
                 </div>
                 <nav class="underline-nav"> 
@@ -151,7 +151,7 @@
                 </ul>
                 </nav>
             </div>
-        </footer>
+          </footer>
     </div>
 
     <script language="javascript">
